# super-orgcontact

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  app.py  client_secret_867372773800-ibom1764051uh01sjcc45o3i7u2d68rl.apps.googleusercontent.com (4).json  client_secret_867372773800-ibom1764051uh01sjcc45o3i7u2d68rl.apps.googleusercontent.com (6).json  pyproject.toml  requirements.txt  test.py  token.json
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: people.py  users.py
src/app/middlewares/: auth.py
src/app/models/: contact.py  user.py
src/app/routes/: __init__.py
src/app/services/: __init__.py
src/app/utils/: __init__.py
